--- a/content/posts/inline-component-test/index.mdx
+++ b/content/posts/inline-component-test/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Fantastic Beasts and Where to Find Them
-date: 2019-11-01
+title: In-line component test
+date: 2022-06-23
 tags:
   - Novel
 ---
