--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,5 +1,8 @@
 <Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}>
-  Hi.
+  Hi. 👋
 </Text>
 
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+This is Chenxi's dev experiment site.
+
+- [IFPS gateway](https://ipfs.chenxi.dev)
+- [ETH gateway](https://eth.chenxi.dev)
