Add first blog: Ownership in Rust

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,4 +5,6 @@ slug: "/about"
 
 Hi!
 
-I'm Chenxi Zhang, a fullstack developer back to [school](https://www.cmu.edu/ini/).
+I'm Chenxi Zhang, a Software Engineer at [Cloudflare Cache Team](https://developers.cloudflare.com/cache/).
+Before that, I've been working in Hong Kong for years and then became a student at [CMU INI](https://www.cmu.edu/ini/).
+I'm interested in System-level development and Distributed Systems.
