--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,8 +1,7 @@
 <Text sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}>
-  Hi. 👋
+  Heya 👋🏻
 </Text>
 
-This is Chenxi's dev experiment site.
-
-- [IFPS gateway](https://ipfs.chenxi.dev)
-- [ETH gateway](https://eth.chenxi.dev)
+This is Chenxi, a Software Engineer at [Cloudflare Cache](https://developers.cloudflare.com/cache/).
+Here, I'll be sharing my tech notes and musings on all things software engineering.
+I hope you'll find something useful and interesting here. Thanks for stopping by!
