--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -4,4 +4,4 @@
 
 This is Chenxi, a Software Engineer at [Cloudflare Cache](https://developers.cloudflare.com/cache/).
 Here, I'll be sharing my tech notes and musings on all things software engineering.
-I hope you'll find something useful and interesting here. Thanks for stopping by!
+I hope you'll find something useful and interesting here.
