--- a/content/posts/inline-component-test/index.mdx
+++ b/content/posts/inline-component-test/index.mdx
@@ -383,4 +383,4 @@ fn main() {
 
 太阳底下无新事，Rust 的所有权和借用检查也不是全新的东西，C++ 老手会说有很多机制可以实现同样安全的代码：智能指针，借用计数和第三方库（如 Boost）等，遵循更严格的代码风格和代码评审流程，等等。但不得不说，在设计上将内存安全置于默认状态的 Rust，编写起来比 C++ 要少了很多心智负担和时间成本。
 
-人是所有软件工程所有环节里最薄弱的一环，那在 ChatGPT 替代掉人编写程序那一刻之前，Rust 真的是一个让人更安心的语言。我们下次在继续聊聊 Rust 的生命周期和编译。Until next time!
+人是软件工程所有环节里最薄弱的一环，那在 ChatGPT 替代掉人编写程序那一刻之前，Rust 真的是一个让人更安心的语言。我们下次在继续聊聊 Rust 的生命周期和编译。Until next time!
